# homethings

./: .clang-format  .gitignore  west.yml
homeclient/: package-lock.json  package.json
homeclient/public/: index.html
homeclient/src/: Api.js  App.js  LedThing.js  Utils.js  index.css
homeserver/: homeserver.py  requrements.txt
iot-app/: CMakeLists.txt
iot-app/boards/: esp32.overlay
iot-app/conf/: debug.conf  network.conf  project.conf
iot-app/src/: CMakeLists.txt  ble_strip.c  ble_strip.h  cmd.c  cmd.h  color.c  color.h  main.c  mqtt.c  strip.c  strip.h
iot-led/: CMakeLists.txt
iot-led/boards/: esp32.overlay
iot-led/conf/: debug.conf  project.conf
iot-led/src/: CMakeLists.txt  animation.c  animation.h  cmd.c  color.c  color.h  main.c  strip.c  strip.h  strip_thread.c
iot-led/src/certs/: certs.h
scripts/: gen-device-keys.py  gen-server-keys.py
zephyr/: module.yml
